--- a/public_html/css/papers.css
+++ b/public_html/css/papers.css
@@ -5,17 +5,22 @@
     width: 50%;
     margin: 0 auto; }
 
+@media screen and (max-width: 768px) {
+  * #menu * {
+    font-size: 10px; } }
+* #menu * .navbar-heade {
+  color: #FFFFFF; }
 * #menu * ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   text-align: center;
-  max-width: none; }
+  max-width: 100%; }
 * #menu * li {
-  max-width: none;
+  max-width: 100%;
   min-width: 100%; }
   * #menu * li a:link, * #menu * li a:visited {
-    font-size: 180%;
+    font-size: 170%;
     text-align: center;
     font-weight: normal;
     display: block;
@@ -25,7 +30,7 @@
   * #menu * li a:hover, * #menu * li a:active {
     background-color: #6F181E;
     font-weight: bold;
-    font-size: 180%;
+    font-size: 160%;
     text-align: center;
     display: block;
     color: #FFFFFF;
@@ -41,7 +46,7 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  max-width: none;
+  max-width: 100%;
   min-width: 90%; }
 * .navbar-header {
   background-color: #ef3340; }
@@ -54,10 +59,13 @@ body {
 .contend {
   background-color: #e2e2e2; }
 
-* #papers {
+* .paper {
   margin-top: 1%; }
-  * #papers h2, * #papers h4 {
+  * .paper h2, * .paper h4 {
     text-align: center; }
+  * .paper .mad {
+    text-align: center;
+    font-family: 'Eater Caps'; }
 
 * .paper {
   background-color: #FFFFFF;
