--- a/public_html/css/resume.css
+++ b/public_html/css/resume.css
@@ -5,17 +5,22 @@
     width: 50%;
     margin: 0 auto; }
 
+@media screen and (max-width: 768px) {
+  * #menu * {
+    font-size: 10px; } }
+* #menu * .navbar-heade {
+  color: #FFFFFF; }
 * #menu * ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   text-align: center;
-  max-width: none; }
+  max-width: 100%; }
 * #menu * li {
-  max-width: none;
+  max-width: 100%;
   min-width: 100%; }
   * #menu * li a:link, * #menu * li a:visited {
-    font-size: 180%;
+    font-size: 170%;
     text-align: center;
     font-weight: normal;
     display: block;
@@ -25,7 +30,7 @@
   * #menu * li a:hover, * #menu * li a:active {
     background-color: #6F181E;
     font-weight: bold;
-    font-size: 180%;
+    font-size: 160%;
     text-align: center;
     display: block;
     color: #FFFFFF;
@@ -41,7 +46,7 @@
   margin: 0;
   padding: 0;
   text-align: center;
-  max-width: none;
+  max-width: 100%;
   min-width: 90%; }
 * .navbar-header {
   background-color: #ef3340; }
@@ -57,5 +62,63 @@ body {
 * #resume {
   margin-top: 1%;
   background-color: #FFFFFF; }
+  * #resume h1, * #resume h2, * #resume h3 {
+    text-align: center; }
+  * #resume #developer {
+    text-align: center;
+    font-family: "Consolas"; }
+
+* .badge {
+  background: white; }
+  * .badge img {
+    max-width: 128px; }
+
+* .chartSoft {
+  background-color: LawnGreen;
+  height: 35px;
+  margin: 3% 0px; }
+
+* .chartLang {
+  background-color: OrangeRed;
+  height: 35px;
+  margin: 3% 0px; }
+
+* .chartTech {
+  background-color: DodgerBlue;
+  height: 35px;
+  margin: 3% 0px; }
+
+* .tables {
+  table-layout: fixed;
+  border-collapse: separate;
+  height: 35px;
+  width: 100%; }
+  * .tables caption {
+    font-weight: bold;
+    font-size: 120%;
+    color: #0A0A0A; }
+  * .tables thead tr td {
+    text-align: center;
+    border-bottom: 1px solid black;
+    font-weight: bold;
+    font-size: 120%; }
+  * .tables thead tr .level {
+    text-align: center;
+    font-size: 120%;
+    color: black;
+    background-color: #CCCCCC;
+    border: 2px solid #1A1A1A;
+    font-variant: small-caps;
+    font-weight: bold;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    border-radius: 25px; }
+  * .tables tbody tr td {
+    text-align: center;
+    vertical-align: middle;
+    border-bottom: 1px solid 	#CCCCCC; }
+  * .tables tbody tr .bar {
+    border-left: 1px solid 	#FFD633;
+    border-right: 1px solid  #FFD633; }
 
 /*# sourceMappingURL=resume.css.map */
