--- a/public_html/sass/_menu.scss
+++ b/public_html/sass/_menu.scss
@@ -1,16 +1,24 @@
 * #menu{ 
+	 @media screen and (max-width: 768px) {
+		*{
+			font-size: 10px;
+		}
+	 }
+	* .navbar-heade{
+		color: #FFFFFF; 
+	}
     * ul {  
         list-style-type: none; 
         margin: 0;
         padding: 0;	  
 		text-align: center;
-		max-width: none;   
+		max-width: 100%;   
     } 
     * li  {    
-		max-width: none;  
+		max-width: 100%;  
 		min-width: 100%; 
         a:link, a:visited  {   
-			font-size: 180%; 
+			font-size: 170%; 
 			text-align:center;
 			font-weight: normal; 
 			display: block;  
@@ -21,7 +29,7 @@
 		a:hover, a:active { 
             background-color: #6F181E;
             font-weight: bold;
-			font-size: 180%; 
+			font-size: 160%; 
 			text-align:center; 
 			display: block;   
             color: #FFFFFF;  
@@ -42,7 +50,7 @@
 			margin: 0;
 			padding: 0;	  
 			text-align: center;
-			max-width: none;  
+			max-width: 100%;  
 			min-width: 90%; 
 		}
 	.navbar-header{ 
