--- a/public_html/sass/projects.scss
+++ b/public_html/sass/projects.scss
@@ -1,10 +1,11 @@
 @import 'base';
 * .projects{
     margin-right:1%; 
-    margin-bottom:1%; 
+    margin-bottom:5px; 
     background-color:#FFFFFF;  
     img{ 
         margin: auto; 
+		max-height: 150px; 
     }
 } 
 .row-eq-height {
